--- a/household/schedules.html
+++ b/household/schedules.html
@@ -300,6 +300,8 @@
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+                    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
 
                 </div>
                 <!-- /.container-fluid -->
