--- a/household/blank.html
+++ b/household/blank.html
@@ -299,9 +299,9 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    <div class="d-sm-flex align-items-center justify-content-between mb-4 flex-wrap">
                         <h1 class="h3 mb-0 text-gray-800">Recycle Bin</h1>
-                        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                        <a href="#" class="btn btn-sm btn-primary shadow-sm my-2 mt-sm-0"><i
                                 class="fas fa-trash fa-sm text-white-50"></i> Add Recycling Bin</a>
                     </div>
 
