--- a/household/blank.html
+++ b/household/blank.html
@@ -19,7 +19,11 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
-
+    <!-- Include Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Include jQuery and Bootstrap Bundle JS -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body id="page-top">
@@ -305,11 +309,126 @@
                                 class="fas fa-trash fa-sm text-white-50"></i> Add Recycling Bin</a>
                     </div>
 
-                    <!-- Content Row -->
-                    <div class="row">
+                    <!-- DataTales Example -->
+                    <div class="card shadow mb-4">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>Waste Type</th>
+                                            <th>Capacity</th>
+                                            <th>Status</th>
+                                            <th>Mark as Full</th>
+                                            <th>Schedule for collection</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Bottles</th>
+                                            <td>80L</th> <!-- Could bein KGs or Litres -->
+                                            <td>Full</th>
+                                            <td><button class="btn btn-sm btn-danger shadow-sm my-2 mt-sm-0" id="cancelButton"><i
+                                class="text-white-50"></i>CANCEL.</button></td>
 
-                        
+                                            <td>2025-01-24 08:59</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Tin Cans</td>
+                                            <td>50L</td>
+                                            <td>Full</td>
+                                            <td><button class="btn btn-sm btn-danger shadow-sm my-2 mt-sm-0" id="cancelButton"><i
+                                class="text-white-50"></i>CANCEL.</button></td>
+                                            <td>2025/01/19 08:59</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Plastic Bottles</td>
+                                            <td>80KG</td>
+                                            <td>Empty</td>
+                                            <td><button class="btn btn-sm btn-success shadow-sm my-2 mt-sm-0" id="confirmButton"><i
+                                class="text-white-50"></i>CONFIRM</button></td>
+                                            <td>----/--/-- --:--</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Returnable bottles</td>
+                                            <td>7 Crates</td>
+                                            <td>Full</td>
+                                            <td><button class="btn btn-sm btn-danger shadow-sm my-2 mt-sm-0" id="cancelButton"><i
+                                class="text-white-50"></i>CANCEL.</button></td>
+                                            <td>2025/01/23 08:59</td>
+                                        </tr>
+                                        
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
+                    <!-- Confirm Modal -->
+                  <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+                      <div class="modal-dialog">
+                          <div class="modal-content">
+                              <div class="modal-header">
+                                  <h5 class="modal-title" id="confirmModalLabel">Schedule Collection</h5>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                              </div>
+                              <div class="modal-body">
+                                  <label for="datetime" class="form-label">Select Date & Time:</label>
+                                  <input type="datetime-local" id="datetime" class="form-control">
+                              </div>
+                              <div class="modal-footer">
+                                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                  <button type="button" class="btn btn-primary">Confirm</button>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <!-- Cancel Modal -->
+                  <div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="cancelModalLabel" aria-hidden="true">
+                      <div class="modal-dialog">
+                          <div class="modal-content">
+                              <div class="modal-header">
+                                  <h5 class="modal-title" id="cancelModalLabel">Cancel Collection</h5>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                              </div>
+                              <div class="modal-body">
+                                  Are you sure you want to cancel the collection?
+                              </div>
+                              <div class="modal-footer">
+                                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                                  <button type="button" class="btn btn-danger">Yes</button>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <script>
+                      $(document).ready(function() {
+                      // Show confirm modal on CONFIRM button click
+                      $('#confirmButton').click(function() {
+                          $('#confirmModal').modal('show');
+                      });
+
+                      // Show cancel modal on CANCEL button click
+                      $('#cancelButton').click(function() {
+                          $('#cancelModal').modal('show');
+                      });
+
+                      // Handle confirm action
+                      $('#confirmAction').click(function() {
+                          $('#confirmModal').modal('hide');
+                          $('#confirmButton').hide();
+                          $('#cancelButton').show();
+                      });
+
+                      // Handle cancel action
+                      $('#cancelAction').click(function() {
+                          $('#cancelModal').modal('hide');
+                          $('#cancelButton').hide();
+                          $('#confirmButton').show();
+                      });
+                  });
+                  </script>
 
                     <!-- Content Row -->
 
