Modify household registration api.

--- a/household/register.html
+++ b/household/register.html
@@ -36,7 +36,7 @@
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                             </div>
-                            <form class="user" id="registerForm" method="POST">
+                            <form class="user" id="registerForm">
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="text" class="form-control form-control-user" id="firstName" name="firstName"
@@ -65,7 +65,7 @@
                                             id="repeatPassword" name="repeatPassword" placeholder="Repeat Password">
                                     </div>
                                 </div>
-                                <button type="submit" onclick="registerUser()" class="btn btn-primary btn-user btn-block">
+                                <button type="submit" onclick="event.preventDefault(); registerUser();" class="btn btn-primary btn-user btn-block">
                                     Register Account
                                 </button>
                                 <hr>
